[package]
name = "data-feed"
description = "Feed of data from an Oracle"
version = "0.0.0"
authors = ["The Aha Company <help@theaha.co>"]
license = "Apache-2.0"
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true