[package]
name = "orchestrator"
version = "0.0.0"
authors = ["The Aha Company <help@theaha.co>"]
license = "Apache-2.0"
publish = false
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
xasset = { path = "../xasset" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true
